# hw2

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: hw2.ipynb
src/: __init__.py  custom_transforms.py  facial_keypoints_dataset.py  hw2.ipynb  keypoint_task.py  model.py
src/data/: __init__.py  custom_transforms.py  facial_keypoints_dataset.py
src/hw2/: __init__.py  keypoint_task.py
src/hw2/data/: __init__.py
src/hw2/models/: __init__.py  resnet18.py  unet.py
src/hw2/notebooks/: hw2.ipynb
src/hw2/utils/: __init__.py  visualize.py
src/models/: __init__.py  resnet18.py  simple_cnn.py  unet.py
src/utils/: __init__.py  visualize.py
