[project]
name = "hw2"
version = "0.1.0"
description = "Directory for homework 2"
readme = "README.md"
authors = [
    { name = "Koni", email = "konstantin.zeck+github@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub~=1.4.1",
    "lightning~=2.6.1",
    "matplotlib~=3.10.8",
    "opencv-python~=4.13.0.92",
    "pandas~=3.0.1",
    "pillow~=12.1.1",
    "scipy~=1.17.1",
    "torch~=2.10.0",
    "torchvision~=0.25.0",
    "tqdm~=4.67.3",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
